--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "store json web signature sessions in cache",
   "main": "index.js",
   "scripts": {
-    "publish": "sh version-to-tag.sh && npm publish",
+    "push": "sh version-to-tag.sh && npm publish",
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "keywords": [
